Change most HAL 9000 nomenclature to Hal
"Hal" is the proper name for this system.
Not HAL
Not HAL 9000

Just Hal

--- a/templates/_partial/user.status.twig
+++ b/templates/_partial/user.status.twig
@@ -13,7 +13,7 @@
     <ul class="list--bare">
         {% if showHalStatus %}
             <li class="mvs">
-                <span class="split__title">HAL</span>
+                <span class="split__title">Hal</span>
                 <p class="mvn">
                     {% if user.isActive %}
                         {{ macros.status('Active', 'success', 'tick') }}
