--- a/templates/_partial/user.types.twig
+++ b/templates/_partial/user.types.twig
@@ -24,7 +24,7 @@
         </li>
         <li class="list--legend">
             <p class="mbn mrs">{{ macros.status('Super', 'error') }}</p>
-            <p class="mbn">HAL Administrators can deploy to all non-prod environments, manage all applications and permissions.</p>
+            <p class="mbn">Hal Administrators can deploy to all non-prod environments, manage all applications and permissions.</p>
         </li>
     </ul>
 </section>
