--- a/templates/admin/credentials/credentials.twig
+++ b/templates/admin/credentials/credentials.twig
@@ -8,7 +8,7 @@
     <h1>{{ page_title }}</h1>
 
     <p>
-        Credentials can be stored and encrypted in the HAL database for use by deployments.
+        Credentials can be stored and encrypted in the Hal database for use by deployments.
         <b>Currently, credentials can only be used by AWS-based deployments.</b>
     </p>
 
