--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -91,7 +91,7 @@
                     </div>
                 </dd>
 
-                <dt class="split__title"><strong>HAL 9000 Push File</strong></dt>
+                <dt class="split__title"><strong>Hal Push File</strong></dt>
                 <dd>
                     <div class="pre-wrapper">
                         {% if pushfile %}
