--- a/templates/admin/permissions/permissions.twig
+++ b/templates/admin/permissions/permissions.twig
@@ -15,7 +15,7 @@
     <h2>Deployment Adminstrators</h2>
     {{ page_macros.userTable(userTypes.btn_pusher, 'btn_pusher', can_remove) }}
 
-    <h2>HAL Administrators</h2>
+    <h2>Hal Administrators</h2>
     {{ page_macros.userTable(userTypes.super, 'super') }}
 
     <h2>User Types</h2>
