--- a/templates/application/application.add.twig
+++ b/templates/application/application.add.twig
@@ -16,7 +16,7 @@
                 <li>
                     <label for="name">Name</label>
                     <input name="name" id="name" maxlength="64" required value="{{ form.name }}" class="text-input">
-                    <small class="additional">Display title for this application such as <b>HAL 9000</b> or <b>My Secret Project</b>.</small>
+                    <small class="additional">Display title for this application such as <b>Hal</b> or <b>My Secret Project</b>.</small>
                 </li>
                 <li>
                     <label for="identifier">
@@ -26,7 +26,7 @@
                     </label>
                     <input type="text" name="identifier" id="identifier" maxlength="24" required value="{{ form.identifier }}" class="text-input t50">
                     <small class="additional">
-                        Unique identifier such as <b>hal9000</b> or <b>my-project</b>.
+                        Unique identifier such as <b>hal</b> or <b>my-project</b>.
                     </small>
                 </li>
                 <li>
