--- a/templates/application/application.edit.twig
+++ b/templates/application/application.edit.twig
@@ -42,7 +42,7 @@
                 <li>
                     <h5 class="label">Github Source</h5>
                     {{ macros.gitsource(application) }}
-                    <small class="additional">Please contact a HAL administrator to change this setting.</small>
+                    <small class="additional">Please contact a Hal administrator to change this setting.</small>
                 </li>
 
                 <li>
