--- a/templates/base.kraken.twig
+++ b/templates/base.kraken.twig
@@ -32,7 +32,7 @@
                             <li><a href="{{ urlFor('kraken.admin.audit.logs.page1') }}">{{ macros.icon('watch') }} Audit Logs</a></li>
                         {% endif %}
 
-                        <li><a href="{{ urlFor('dashboard') }}">{{ macros.icon('spinner-3') }} HAL 9000</a></li>
+                        <li><a href="{{ urlFor('dashboard') }}">{{ macros.icon('spinner-3') }} Hal</a></li>
                         <li><a href="{{ urlFor('kraken.help') }}">{{ macros.icon('question') }} Help</a></li>
                         <li><a href="{{ urlFor('logout') }}">{{ macros.icon('sign-out') }} Sign out</a></li>
                     </ul>
