--- a/templates/dashboard.twig
+++ b/templates/dashboard.twig
@@ -75,11 +75,11 @@
 
 {% block intro %}
     <div>
-        <h2>My name is HAL.</h2>
+        <h2>My name is Hal.</h2>
         <h5>I deploy code to other, less capable machines.</h5>
 
         <p>
-            This is the latest version of the HAL 9000 deployment system for Quicken Loans applications.
+            This is the latest version of the Hal deployment system for Quicken Loans applications.
             The 9000 series is the most reliable computer ever made. No 9000 computer has ever made a mistake or distorted information. We are all, by any practical definition of the words, foolproof and incapable of error.
         </p>
         <p>
@@ -99,5 +99,5 @@
 
 {% block stuck_details %}
     Stuck jobs are builds or pushes that have been running for more than 45 minutes.<br>
-    They require intervention from HAL administrators!
+    They require intervention from Hal administrators!
 {% endblock %}
