--- a/templates/help/application-setup.twig
+++ b/templates/help/application-setup.twig
@@ -38,7 +38,7 @@
         </li>
     </ul>
 
-    <h3 id="onprem-rsync">{{ macros.status_icon('How do I set up On Premise servers for HAL 9000?') }}</h3>
+    <h3 id="onprem-rsync">{{ macros.status_icon('How do I set up On Premise servers for Hal?') }}</h3>
     {{ block('setup_rsync') }}
 
     <h3 id="aws-elastic-beanstalk">{{ macros.status_icon('How I configure my application for AWS Elastic Beanstalk?') }}</h3>
