--- a/templates/help/github-permissions.twig
+++ b/templates/help/github-permissions.twig
@@ -12,7 +12,7 @@
         </p>
     </div>
 
-    <p>If you are a collaborator on a Github repository, but are unable to build or push the code in HAL 9000, then you may need to make the following changes.</p>
+    <p>If you are a collaborator on a Github repository, but are unable to build or push the code in Hal, then you may need to make the following changes.</p>
 
     <section class="help-walkthrough">
         <h2>Step 1</h2>
@@ -39,7 +39,7 @@
     <section class="help-walkthrough">
         <h2>Step 4</h2>
         <p>On the right side of the page, make sure your visibility is set to 'Public'. If it says 'Private', click on the drop down and change it to 'Public'.
-        This change allows others (including HAL 9000) to see that you are a member of this organization.</p>
+        This change allows others (including Hal) to see that you are a member of this organization.</p>
 
         <img src="/img/help/github-permissions/step4.png" class="help-step" alt="Step 4" />
     </section>
