--- a/templates/kraken/application/application.edit.twig
+++ b/templates/kraken/application/application.edit.twig
@@ -26,9 +26,9 @@
                 {% if available %}
                 <li>
                     <label for="app-repo">
-                        HAL Application
+                        Hal Application
                         <small class="additional">
-                            Link a HAL application to this Kraken application. Recommended for applications already using HAL 9000.
+                            Link a Hal application to this Kraken application. Recommended for applications already using Hal.
                         </small>
                     </label>
 
@@ -61,7 +61,7 @@
                     <label for="app-name">
                         Name
                         <small class="additional">
-                            Optional when linking to a HAL application.
+                            Optional when linking to a Hal application.
                         </small>
                     </label>
                     <input type="text" name="name" id="app-name" maxlength="64" value="{{ form.name }}" class="text-input">
