--- a/templates/kraken/help.twig
+++ b/templates/kraken/help.twig
@@ -79,8 +79,8 @@
     <h3 id="add-application">{{ macros.status_icon('How do I add my application to Kraken?') }}</h3>
     <p>
         All that is required to add an Application is a unique <b>CORE ID</b>, generated when an application is added to the <a href="http://core">CORE Website</a>.
-        When adding an application, we highly recommend </b>linking</b> to an existing HAL 9000 applicaiton to allow quick traversal back and
-        forth between HAL 9000 and Kraken. Kraken also inherits permission settings from HAL 9000.
+        When adding an application, we highly recommend </b>linking</b> to an existing Hal application to allow quick traversal back and
+        forth between Hal and Kraken. Kraken also inherits permission settings from Hal.
     </p>
 
     <p>
@@ -92,7 +92,7 @@
     <p>
         <strong>Yes.</strong><br>
         Kraken mirrors the deployment process that is used for code deployments. When a configuration is deployed, the application
-        configuration schema and all current values are frozen. This <b>snapshot</b> is stored permanently (much like HAL 9000 builds) and can be redeployed
+        configuration schema and all current values are frozen. This <b>snapshot</b> is stored permanently (much like Hal builds) and can be redeployed
         at <b>any time</b>, even if the application schema changes later.
 
     </p>
