--- a/templates/latest-release.twig
+++ b/templates/latest-release.twig
@@ -10,12 +10,12 @@
     {{ block('latest_release_28') }}
 
     <h2>Past Releases</h2>
-    <p>Check the following documentation sites for recent changes to HAL 9000, or view past updates.</p>
+    <p>Check the following documentation sites for recent changes to Hal, or view past updates.</p>
     <ul class="list--bullet">
         <li><a href="http://git/web-core/hal/releases">GitHub release notes</a></li>
         <li><a href="https://jira/projects/HAL?selectedItem=com.atlassian.jira.jira-projects-plugin:release-page&status=all">Jira version history</a></li>
         <li>
-            HAL 9000 release notes
+            Hal release notes
             {% include '_partial/help.release-notes.twig' %}
         </li>
 
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block latest_release_28 %}
-    <p>The latest release of HAL 9000 is <b>2.8</b>. It was deployed on Friday, Jan ??, 2016.</p>
+    <p>The latest release of Hal is <b>2.8</b>. It was deployed on Friday, Jan ??, 2016.</p>
 
     <h2>Changelog</h2>
 
