--- a/templates/login.twig
+++ b/templates/login.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <h1 class="mbn">HAL 9000 Deployment System</h1>
+    <h1 class="mbn">Hal Deployment System</h1>
     <p>It deploys code to other, less capable machines.</p>
 
     {% if errors %}
