--- a/templates/maintenance.html
+++ b/templates/maintenance.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" id="error-page"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Maintenance - HAL 9000</title>
+        <title>Maintenance - Hal</title>
         <link type="image/x-icon" rel="shortcut icon" href="/hal.ico"> <!-- for ie -->
         <link type="image/png" rel="apple-touch-icon-precomposed" sizes="57x57" href="/hal-57px.png"> <!-- for apple -->
         <link type="image/png" rel="apple-touch-icon-precomposed" sizes="72x72" href="/hal-72px.png"> <!-- for apple -->
