--- a/templates/_partial/layout.header.twig
+++ b/templates/_partial/layout.header.twig
@@ -21,7 +21,7 @@
                 <h1 class="hal-label">
                     <span class="hal-label__name">HAL</span>
                     <span class="hal-label__version">9000 {% if isUpdateTickOn() %}
-                        <a class="hal-stamp" href="{{ urlFor('latest.release') }}" title="HAL 9000 was recently updated!">{{ macros.icon('star') }}</a>
+                        <a class="hal-stamp" href="{{ urlFor('latest.release') }}" title="Hal was recently updated!">{{ macros.icon('star') }}</a>
                     {% endif %}</span>
                 </h1>
             </div>
