--- a/templates/kraken/application.add.twig
+++ b/templates/kraken/application.add.twig
@@ -22,9 +22,9 @@
 
                 <li>
                     <label for="app-hal_app">
-                        HAL Application
+                        Hal Application
                         <small class="additional">
-                            Link a HAL application to this Kraken application. Recommended for applications already using HAL 9000.
+                            Link a Hal application to this Kraken application. Recommended for applications already using Hal.
                         </small>
                     </label>
 
@@ -45,7 +45,7 @@
                         </select>
 
                     {% else %}
-                        <p>No HAL 9000 applications are available to be linked.</p>
+                        <p>No Hal applications are available to be linked.</p>
                     {% endif %}
                 </li>
 
@@ -53,7 +53,7 @@
                     <label for="app-name">
                         Name
                         <small class="additional">
-                            Optional when linking to a HAL application.
+                            Optional when linking to a Hal application.
                         </small>
                     </label>
                     <input type="text" name="name" id="app-name" maxlength="64" value="{{ form.name }}" class="text-input">
