--- a/templates/application/application.twig
+++ b/templates/application/application.twig
@@ -56,7 +56,7 @@
             <dt class="split__title">Identifier</dt>
             <dd>{{ application.key }}</dd>
 
-            <dt class="split__title">Github Source</dt>
+            <dt class="split__title">GitHub Source</dt>
             <dd>{{ macros.gitsource(application) }}</dd>
         </dl>
     </div>
