--- a/templates/group/group.twig
+++ b/templates/group/group.twig
@@ -21,7 +21,7 @@
             <thead>
                 <tr>
                     <th>Application</th>
-                    <th>Github Source</th>
+                    <th>GitHub Source</th>
                     <th></th>
                 </tr>
             </thead>
