--- a/templates/help/github-permissions.twig
+++ b/templates/help/github-permissions.twig
@@ -12,7 +12,7 @@
         </p>
     </div>
 
-    <p>If you are a collaborator on a Github repository, but are unable to build or push the code in Hal, then you may need to make the following changes.</p>
+    <p>If you are a collaborator on a GitHub repository, but are unable to build or push the code in Hal, then you may need to make the following changes.</p>
 
     <section class="help-walkthrough">
         <h2>Step 1</h2>
