--- a/templates/user/settings.twig
+++ b/templates/user/settings.twig
@@ -24,7 +24,7 @@
     </section>
 
     <section class="leader--andre">
-        <h2 class="mbn">Github Deployment Updates</h2>
+        <h2 class="mbn">GitHub Deployment Updates</h2>
         {{ block('github_token') }}
     </section>
 {% endblock %}
