--- a/templates/user/github.token.error.twig
+++ b/templates/user/github.token.error.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% import "_partial/macros.twig" as macros %}
 
-{% set page_title = "Github Authorization Error" %}
+{% set page_title = "GitHub Authorization Error" %}
 
 {% block content %}
     <h2>{{ page_title }}</h2>
